--- a/HW1Revised/app/src/main/res/values/strings.xml
+++ b/HW1Revised/app/src/main/res/values/strings.xml
@@ -5,9 +5,22 @@
     <string name="AddREm"> Add Reminder</string>
     <string name="SaveRem">Save Reminder</string>
     <string name="ReminderText">Reminder</string>
-    <string name="SharedPreferences">com.example.myapplication.REMINDERS</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="SharedPreferences" translatable="false">com.example.myapplication.loginDetails</string>
+
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reminder_text">Reminder Text</string>
     <string name="_1">1</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="password">Password</string>
+    <string name="user">Username</string>
+    <string name="LoginStatus">loginStatus</string>
 </resources>
